--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     ]
   },
   "require-dev": {
+    "roave/security-advisories": "dev-latest"
+    ,
     "phpunit/phpunit": "^9"
   },
   "require": {
