--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=Sheitak_TestsCourses
 sonar.organization=sheitak
 
+sonar.php.coverage.reportPaths=coverage.xml
+
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TestsCourses
 #sonar.projectVersion=1.0
