--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=Sheitak_TestsCourses
 sonar.organization=sheitak
 
-sonar.php.coverage.reportPaths=coverage/coverage.xml
+sonar.php.coverage.reportPaths=./coverage/coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=TestsCourses
